// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SurveyFilterService survey with no values should contain no dependencies 1`] = `
{
  "image_url": "https://cold-public-assets.s3.us-east-2.amazonaws.com/splash_images/General.png",
  "intro_markdown": "Please complete the REI Greenhouse Gas Emissions & Climate survey to the best of your ability. If you have any questions, please contact your REI Sustainability Manager.",
  "progress": [
    {
      "answered": 1,
      "complete": true,
      "questions": {
        "GEN-8": {
          "ai_answered": false,
          "user_answered": true,
        },
      },
      "review": 0,
      "section": "GEN",
      "title": "General",
      "total": 1,
    },
    {
      "answered": 1,
      "complete": true,
      "questions": {
        "MFG-1": {
          "ai_answered": true,
          "user_answered": true,
        },
      },
      "review": 0,
      "section": "MFG",
      "title": "Manufacturing Code of Conduct",
      "total": 1,
    },
    {
      "answered": 0,
      "complete": false,
      "questions": {
        "GHG-1": {
          "ai_answered": false,
          "user_answered": false,
        },
        "GHG-10": {
          "ai_answered": false,
          "user_answered": false,
        },
        "GHG-11": {
          "ai_answered": false,
          "user_answered": false,
        },
        "GHG-12": {
          "ai_answered": false,
          "user_answered": false,
        },
        "GHG-13": {
          "ai_answered": false,
          "user_answered": false,
        },
        "GHG-2": {
          "ai_answered": false,
          "user_answered": false,
        },
        "GHG-3": {
          "ai_answered": false,
          "user_answered": false,
        },
        "GHG-4": {
          "ai_answered": false,
          "user_answered": false,
        },
        "GHG-5": {
          "ai_answered": false,
          "user_answered": false,
        },
        "GHG-6": {
          "ai_answered": false,
          "user_answered": false,
        },
        "GHG-7": {
          "ai_answered": false,
          "user_answered": false,
        },
        "GHG-7A": {
          "ai_answered": false,
          "user_answered": false,
        },
        "GHG-7C": {
          "ai_answered": false,
          "user_answered": false,
        },
        "GHG-8": {
          "ai_answered": false,
          "user_answered": false,
        },
        "GHG-9A": {
          "ai_answered": false,
          "user_answered": false,
        },
      },
      "review": 0,
      "section": "GHG",
      "title": "Greenhouse Gas Emissions & Climate",
      "total": 15,
    },
    {
      "answered": 0,
      "complete": false,
      "questions": {
        "PFAS-A1": {
          "ai_answered": false,
          "user_answered": false,
        },
      },
      "review": 0,
      "section": "PFAS",
      "title": "PFAS - STUFF",
      "total": 1,
    },
    {
      "answered": 2,
      "complete": false,
      "questions": {
        "APK-1": {
          "ai_answered": false,
          "user_answered": true,
        },
        "APK-2": {
          "ai_answered": false,
          "user_answered": true,
        },
        "APK-3": {
          "ai_answered": false,
          "user_answered": false,
        },
        "APK-7": {
          "ai_answered": false,
          "user_answered": false,
        },
      },
      "review": 0,
      "section": "APK",
      "title": "APK - STUFF",
      "total": 4,
    },
  ],
  "sections": {
    "APK": {
      "component": null,
      "follow_up": {
        "APK-1": {
          "component": "textarea",
          "idx": 0,
          "options": [],
          "placeholder": "",
          "prompt": "Approximately what percentage of the apparel product units your brand shipped to REI during the past calendar year were packaged in individual polybags? (Select an option from the dropdown.)",
          "tooltip": "",
          "value": 50,
        },
        "APK-2": {
          "component": "textarea",
          "idx": 1,
          "options": [],
          "placeholder": "",
          "prompt": "Approximately what percentage of the apparel product units your brand shipped to REI during the past calendar year were packaged in a master polybag containing all units in each carton?",
          "tooltip": "",
          "value": 100,
        },
        "APK-3": {
          "component": "yes_no",
          "idx": 2,
          "options": [],
          "placeholder": "",
          "prompt": "If you ship apparel items to REI without individual polybags, how are they packaged? (Select all that apply.)",
          "tooltip": "",
        },
        "APK-7": {
          "component": "yes_no",
          "idx": 2,
          "options": [],
          "placeholder": "",
          "prompt": "Of the total number of polybags used to ship apparel products to REI during the last calendar year, please indicate approximately what percentage are made of each of the following materials:",
          "tooltip": "",
        },
      },
      "prompt": "",
      "title": "APK - STUFF",
    },
    "GEN": {
      "component": null,
      "follow_up": {
        "GEN-8": {
          "component": "multi_select",
          "idx": 0,
          "options": [
            "Apparel",
            "Accessories (textile-based)",
            "Cookware",
            "Footwear",
            "Headwear",
            "Other textile products",
            "Packs",
            "Products that contain down",
            "Products that contain leather",
            "Products that contain wool",
            "Ski wax",
            "Sleeping bags",
            "Sunscreens or other formulated sun-protection products",
            "Tents",
            "Treatments for gear and clothing",
            "Water bottles, food containers, dinnerware or utensils",
            "None of the above",
          ],
          "placeholder": "",
          "prompt": "Please indicate if your brand has supplied to REI in the past 12 months, or anticipates supplying to REI in the next 12 months, products that fall into any of the following categories.",
          "tooltip": "Select all that apply.",
          "value": [
            "Apparel",
          ],
        },
      },
      "prompt": "Please complete the REI Product Impact Standards survey to the best of your ability. If you have any questions, please contact your REI Sustainability Manager.",
      "title": "General",
    },
    "GHG": {
      "category_description": "As part of the REI Product Impact Standards, REI expects each brand partner to measure their annual greenhouse gas (GHG) emissions , set a reduction target, and implement an action plan for reducing their emissions. The following section focuses on the steps your brand is taking to address your contribution to climate change.",
      "category_idx": 0,
      "component": null,
      "follow_up": {
        "GHG-1": {
          "component": "yes_no",
          "idx": 0,
          "options": [],
          "placeholder": "",
          "prompt": "Has your brand measured its carbon footprint this year or within the last calendar year?",
          "tooltip": "Note: The term carbon is used here as a generally accepted shorthand for greenhouse gas.",
        },
        "GHG-10": {
          "component": "select",
          "idx": 13,
          "options": [
            "Yes, a 1-25% reduction",
            "Yes, a 26-50% reduction",
            "Yes, a 51-75% reduction",
            "Yes, a 76-99% reduction",
            "Yes, a 100% reduction",
            "No",
          ],
          "placeholder": "",
          "prompt": "Did your brand’s carbon emissions over the previous year represent a measurable reduction in emissions intensity (i.e., carbon emissions per unit of product or dollar of revenue) relative to the prior year or a previous baseline year?",
          "tooltip": "",
        },
        "GHG-11": {
          "component": "yes_no",
          "idx": 14,
          "options": [],
          "placeholder": "",
          "prompt": "Does your brand generate and/or purchase carbon credits to “offset” all or a portion of your carbon emissions?",
          "tooltip": "",
        },
        "GHG-12": {
          "based_on": "GHG-11",
          "component": "multi_select",
          "idx": 15,
          "options": [
            "Scope 1: Direct emissions from company vehicles & facilities",
            "Scope 2: Indirect emission from purchased electricity, steam, heating & cooling for own use",
            "A portion of scope 3 emissions, but not including those from all the products you sell to REI",
            "All or a portion of scope 3 emissions, including all the products you sell to REI",
            "Other",
          ],
          "placeholder": "",
          "prompt": "Please indicate whether the carbon credits you generate and/or purchase account for and include the following components of your carbon footprint.",
          "tooltip": "Select all that apply.",
        },
        "GHG-13": {
          "additional_context": {
            "comparison": "Yes, we’re certified to another carbon/climate neutrality standard (please describe below)",
            "component": "textarea",
            "operator": "==",
            "placeholder": "",
            "prompt": "If you are certified by another carbon/climate neutrality standard, please indicate which standard(s) your brand is certified to.",
            "tooltip": "",
          },
          "component": "select",
          "idx": 16,
          "options": [
            "Yes, we’re Climate Neutral Certified",
            "Yes, we’re certified to another carbon/climate neutrality standard (please describe below)",
            "No",
          ],
          "placeholder": "",
          "prompt": "Is your brand certified to a third-party standard that validates that you’ve purchased carbon credits sufficient to “offset” the relevant components of your carbon footprint (e.g., Climate Neutral Certified)?",
          "tooltip": "",
        },
        "GHG-2": {
          "additional_context": {
            "comparison": "Yes, using another GHG accounting standard (please indicate below)",
            "component": "textarea",
            "operator": "==",
            "placeholder": "",
            "prompt": "Please indicate which standard(s) you used. (Note: If entering multiple, separate using commas.)",
          },
          "based_on": "GHG-1",
          "component": "select",
          "idx": 1,
          "options": [
            "Yes, using the GHG Protocol",
            "Yes, using another GHG accounting standard (please indicate below)",
            "No",
          ],
          "placeholder": "",
          "prompt": "Was your carbon footprint calculated using an internationally recognized greenhouse gas accounting standard (e.g., the GHG Protocol)?",
          "tooltip": "Note: The term carbon is used here as a generally accepted shorthand for greenhouse gas.",
        },
        "GHG-3": {
          "component": "multi_select",
          "idx": 2,
          "options": [
            "Scope 1: Direct emissions from company vehicles & facilities",
            "Scope 2: Indirect emission from purchased electricity, steam, heating & cooling for own use",
            "Scope 3: Indirect emissions from purchased goods and services (i.e., Category 1)",
            "Scope 3: Indirect emissions from all other upstream and downstream sources (i.e., Categories 2-15)",
          ],
          "placeholder": "",
          "prompt": "Was your carbon footprint calculated using an internationally recognized greenhouse gas accounting standard (e.g., the GHG Protocol)?",
          "tooltip": "",
        },
        "GHG-4": {
          "additional_context": {
            "comparison": true,
            "component": "textarea",
            "operator": "==",
            "placeholder": "",
            "prompt": "Please provide the hyperlink to the verification document.",
          },
          "component": "yes_no",
          "idx": 3,
          "options": [],
          "placeholder": "",
          "prompt": "Has your brand 's carbon footprint been verified by an independent third-party?",
          "tooltip": "",
        },
        "GHG-5": {
          "additional_context": {
            "comparison": true,
            "component": "textarea",
            "operator": "==",
            "placeholder": "",
            "prompt": "Please provide the hyperlink to your most recent public report.",
          },
          "component": "yes_no",
          "idx": 4,
          "options": [],
          "placeholder": "",
          "prompt": "Does your brand report its carbon footprint publicly?",
          "tooltip": "",
        },
        "GHG-6": {
          "component": "select",
          "idx": 5,
          "options": [
            "Yes, we calculate the carbon emissions from every product we sell, including those we sell to REI.",
            "Yes, we calculate the carbon emissions from a subset of the products we sell, including those we sell to REI.",
            "Yes, we calculate the carbon emissions from a subset of the products we sell, but not including those we sell to REI.",
            "No",
          ],
          "placeholder": "",
          "prompt": "Does your brand calculate the carbon emissions from individual products you sell?",
          "tooltip": "",
        },
        "GHG-7": {
          "component": "yes_no",
          "idx": 7,
          "options": [],
          "placeholder": "",
          "prompt": "Has your brand set a quantitative target(s) to reduce your carbon emissions?",
          "tooltip": "",
        },
        "GHG-7A": {
          "component": "multi_select",
          "idx": 8,
          "options": [
            "Scope 1: Direct emissions from company vehicles & facilities",
            "Scope 2: Indirect emissions from purchased electricity, steam, heating & cooling for own use",
            "Scope 3: Indirect emissions from purchased goods and services (i.e., Category 1)",
            "Scope 3: Indirect emissions from all other relevant upstream and downstream sources (i.e., Categories 2-15)",
          ],
          "placeholder": "",
          "prompt": "Which components of your carbon footprint are covered by your quantitative reduction target?",
          "tooltip": "Select all that apply.",
        },
        "GHG-7C": {
          "component": "select",
          "idx": 10,
          "options": [
            "Absolute emissions reduction",
            "Reduction in emissions intensity",
          ],
          "placeholder": "",
          "prompt": "Please select one of the following to indicate if your target is for absolute emissions reduction (i.e., total carbon emissions) or reduction in emissions intensity (i.e., carbon emissions per unit of product or dollar of revenue):",
          "tooltip": "",
        },
        "GHG-8": {
          "component": "select",
          "idx": 11,
          "options": [
            "Yes, our target(s) has been approved by the SBTi",
            "No, but our target(s) is currently being evaluated by the SBTi for approval",
            "No, but we’ve aligned our target(s) with the SBTi’s guidance",
            "No, but we’ve aligned our target(s) with an equivalent framework for setting science-aligned reduction targets",
            "No",
          ],
          "placeholder": "",
          "prompt": "Has your emission reduction target(s) been approved by the Science Based Targets Initiative (SBTi) or an equivalent framework?",
          "tooltip": "Note: REI considers a science-aligned target to be one that includes emissions from scopes 1, 2, and 3 and aligns with what the latest climate science indicates is necessary to limit global warming to 1.5oC above pre-industrial levels.",
        },
        "GHG-9A": {
          "additional_context": {
            "comparison": "Other",
            "component": "textarea",
            "operator": "==",
            "placeholder": "",
            "prompt": "Please describe.",
            "tooltip": "",
          },
          "component": "multi_select",
          "idx": 12,
          "options": [
            "Use of low-carbon materials or ingredients in products",
            "Use of clean energy in product manufacturing",
            "Use of clean energy to power operations (e.g., offices, distribution centers, etc.)",
            "Minimization of materials waste in manufacturing",
            "Energy efficiency in manufacturing",
            "Use of circular business models (e.g., selling used products, renting or leasing products, product subscription, product recycling, etc.)",
            "Supporting customers in reducing emissions during product use",
            "Other (please describe)",
          ],
          "placeholder": "",
          "prompt": "What are the primary components of your emissions reduction action plan?",
          "tooltip": "Select all that apply.",
        },
      },
      "image_url": "https://images.unsplash.com/photo-1533038590840-1cde6e668a91?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1587&q=80",
      "prompt": "",
      "title": "Greenhouse Gas Emissions & Climate",
    },
    "MFG": {
      "category_description": "As part of the REI Product Impact Standards, REI expects each brand partner to have in place a code of conduct that outlines the social and environmental standards to be upheld within their supply chain.",
      "category_idx": 0,
      "component": null,
      "follow_up": {
        "MFG-1": {
          "additional_context": {
            "comparison": false,
            "component": "textarea",
            "operator": "==",
            "placeholder": "",
            "prompt": "Please describe how your brand plans to align with REI's expectation in this area.",
          },
          "ai_response": {
            "answer": true,
          },
          "component": "yes_no",
          "idx": 0,
          "options": [],
          "placeholder": "",
          "prompt": "Does your brand have in place a code of conduct for factories that manufacture the products you supply to REI?",
          "tooltip": "",
          "value": false,
        },
      },
      "image_url": "https://images.unsplash.com/photo-1533038590840-1cde6e668a91?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1587&q=80",
      "prompt": "",
      "title": "Manufacturing Code of Conduct",
    },
    "PFAS": {
      "category_description": "",
      "category_idx": 0,
      "component": null,
      "follow_up": {
        "PFAS-A1": {
          "component": "textarea",
          "idx": 0,
          "options": [],
          "placeholder": "",
          "prompt": "Does your brand have a formal policy/target in place regarding the presence of PFAS in your products?",
          "tooltip": "",
        },
      },
      "image_url": "https://images.unsplash.com/photo-1533038590840-1cde6e668a91?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1587&q=80",
      "prompt": "",
      "title": "PFAS - STUFF",
    },
  },
  "title": "REI Product Impact Standards",
}
`;

exports[`SurveyFilterService testing progress filter answering MFG questions 1 Answer: should match snapshot 1`] = `
[
  {
    "answered": 0,
    "complete": false,
    "questions": {
      "GEN-8": {
        "ai_answered": false,
        "user_answered": false,
      },
    },
    "review": 0,
    "section": "GEN",
    "title": "General",
    "total": 1,
  },
  {
    "answered": 1,
    "complete": false,
    "questions": {
      "MFG-1": {
        "ai_answered": false,
        "user_answered": true,
      },
      "MFG-2": {
        "ai_answered": false,
        "user_answered": false,
      },
      "MFG-3": {
        "ai_answered": false,
        "user_answered": false,
      },
      "MFG-4": {
        "ai_answered": false,
        "user_answered": false,
      },
    },
    "review": 0,
    "section": "MFG",
    "title": "Manufacturing Code of Conduct",
    "total": 4,
  },
  {
    "answered": 0,
    "complete": false,
    "questions": {
      "GHG-1": {
        "ai_answered": false,
        "user_answered": false,
      },
      "GHG-10": {
        "ai_answered": false,
        "user_answered": false,
      },
      "GHG-11": {
        "ai_answered": false,
        "user_answered": false,
      },
      "GHG-12": {
        "ai_answered": false,
        "user_answered": false,
      },
      "GHG-13": {
        "ai_answered": false,
        "user_answered": false,
      },
      "GHG-2": {
        "ai_answered": false,
        "user_answered": false,
      },
      "GHG-3": {
        "ai_answered": false,
        "user_answered": false,
      },
      "GHG-4": {
        "ai_answered": false,
        "user_answered": false,
      },
      "GHG-5": {
        "ai_answered": false,
        "user_answered": false,
      },
      "GHG-6": {
        "ai_answered": false,
        "user_answered": false,
      },
      "GHG-7": {
        "ai_answered": false,
        "user_answered": false,
      },
      "GHG-7A": {
        "ai_answered": false,
        "user_answered": false,
      },
      "GHG-7C": {
        "ai_answered": false,
        "user_answered": false,
      },
      "GHG-8": {
        "ai_answered": false,
        "user_answered": false,
      },
      "GHG-9A": {
        "ai_answered": false,
        "user_answered": false,
      },
    },
    "review": 0,
    "section": "GHG",
    "title": "Greenhouse Gas Emissions & Climate",
    "total": 15,
  },
  {
    "answered": 0,
    "complete": false,
    "questions": {
      "APK-1": {
        "ai_answered": false,
        "user_answered": false,
      },
      "APK-2": {
        "ai_answered": false,
        "user_answered": false,
      },
    },
    "review": 0,
    "section": "APK",
    "title": "APK - STUFF",
    "total": 2,
  },
]
`;

exports[`SurveyFilterService testing progress filter answering MFG questions 2 Answers: should match snapshot 1`] = `
[
  {
    "answered": 0,
    "complete": false,
    "questions": {
      "GEN-8": {
        "ai_answered": false,
        "user_answered": false,
      },
    },
    "review": 0,
    "section": "GEN",
    "title": "General",
    "total": 1,
  },
  {
    "answered": 2,
    "complete": false,
    "questions": {
      "MFG-1": {
        "ai_answered": false,
        "user_answered": true,
      },
      "MFG-2": {
        "ai_answered": false,
        "user_answered": true,
      },
      "MFG-3": {
        "ai_answered": false,
        "user_answered": false,
      },
      "MFG-4": {
        "ai_answered": false,
        "user_answered": false,
      },
    },
    "review": 0,
    "section": "MFG",
    "title": "Manufacturing Code of Conduct",
    "total": 4,
  },
  {
    "answered": 0,
    "complete": false,
    "questions": {
      "GHG-1": {
        "ai_answered": false,
        "user_answered": false,
      },
      "GHG-10": {
        "ai_answered": false,
        "user_answered": false,
      },
      "GHG-11": {
        "ai_answered": false,
        "user_answered": false,
      },
      "GHG-12": {
        "ai_answered": false,
        "user_answered": false,
      },
      "GHG-13": {
        "ai_answered": false,
        "user_answered": false,
      },
      "GHG-2": {
        "ai_answered": false,
        "user_answered": false,
      },
      "GHG-3": {
        "ai_answered": false,
        "user_answered": false,
      },
      "GHG-4": {
        "ai_answered": false,
        "user_answered": false,
      },
      "GHG-5": {
        "ai_answered": false,
        "user_answered": false,
      },
      "GHG-6": {
        "ai_answered": false,
        "user_answered": false,
      },
      "GHG-7": {
        "ai_answered": false,
        "user_answered": false,
      },
      "GHG-7A": {
        "ai_answered": false,
        "user_answered": false,
      },
      "GHG-7C": {
        "ai_answered": false,
        "user_answered": false,
      },
      "GHG-8": {
        "ai_answered": false,
        "user_answered": false,
      },
      "GHG-9A": {
        "ai_answered": false,
        "user_answered": false,
      },
    },
    "review": 0,
    "section": "GHG",
    "title": "Greenhouse Gas Emissions & Climate",
    "total": 15,
  },
  {
    "answered": 0,
    "complete": false,
    "questions": {
      "APK-1": {
        "ai_answered": false,
        "user_answered": false,
      },
      "APK-2": {
        "ai_answered": false,
        "user_answered": false,
      },
    },
    "review": 0,
    "section": "APK",
    "title": "APK - STUFF",
    "total": 2,
  },
]
`;

exports[`SurveyFilterService testing progress filter answering MFG questions 3 Answers: should match snapshot 1`] = `
[
  {
    "answered": 0,
    "complete": false,
    "questions": {
      "GEN-8": {
        "ai_answered": false,
        "user_answered": false,
      },
    },
    "review": 0,
    "section": "GEN",
    "title": "General",
    "total": 1,
  },
  {
    "answered": 2,
    "complete": false,
    "questions": {
      "MFG-1": {
        "ai_answered": false,
        "user_answered": true,
      },
      "MFG-2": {
        "ai_answered": false,
        "user_answered": true,
      },
      "MFG-3": {
        "ai_answered": false,
        "user_answered": false,
      },
      "MFG-4": {
        "ai_answered": false,
        "user_answered": false,
      },
    },
    "review": 0,
    "section": "MFG",
    "title": "Manufacturing Code of Conduct",
    "total": 4,
  },
  {
    "answered": 0,
    "complete": false,
    "questions": {
      "GHG-1": {
        "ai_answered": false,
        "user_answered": false,
      },
      "GHG-10": {
        "ai_answered": false,
        "user_answered": false,
      },
      "GHG-11": {
        "ai_answered": false,
        "user_answered": false,
      },
      "GHG-12": {
        "ai_answered": false,
        "user_answered": false,
      },
      "GHG-13": {
        "ai_answered": false,
        "user_answered": false,
      },
      "GHG-2": {
        "ai_answered": false,
        "user_answered": false,
      },
      "GHG-3": {
        "ai_answered": false,
        "user_answered": false,
      },
      "GHG-4": {
        "ai_answered": false,
        "user_answered": false,
      },
      "GHG-5": {
        "ai_answered": false,
        "user_answered": false,
      },
      "GHG-6": {
        "ai_answered": false,
        "user_answered": false,
      },
      "GHG-7": {
        "ai_answered": false,
        "user_answered": false,
      },
      "GHG-7A": {
        "ai_answered": false,
        "user_answered": false,
      },
      "GHG-7C": {
        "ai_answered": false,
        "user_answered": false,
      },
      "GHG-8": {
        "ai_answered": false,
        "user_answered": false,
      },
      "GHG-9A": {
        "ai_answered": false,
        "user_answered": false,
      },
    },
    "review": 0,
    "section": "GHG",
    "title": "Greenhouse Gas Emissions & Climate",
    "total": 15,
  },
  {
    "answered": 0,
    "complete": false,
    "questions": {
      "APK-1": {
        "ai_answered": false,
        "user_answered": false,
      },
      "APK-2": {
        "ai_answered": false,
        "user_answered": false,
      },
    },
    "review": 0,
    "section": "APK",
    "title": "APK - STUFF",
    "total": 2,
  },
]
`;

exports[`SurveyFilterService testing progress filter answering MFG questions 4 Answers: should match snapshot 1`] = `
[
  {
    "answered": 0,
    "complete": false,
    "questions": {
      "GEN-8": {
        "ai_answered": false,
        "user_answered": false,
      },
    },
    "review": 0,
    "section": "GEN",
    "title": "General",
    "total": 1,
  },
  {
    "answered": 4,
    "complete": true,
    "questions": {
      "MFG-1": {
        "ai_answered": false,
        "user_answered": true,
      },
      "MFG-2": {
        "ai_answered": false,
        "user_answered": true,
      },
      "MFG-3": {
        "ai_answered": false,
        "user_answered": true,
      },
      "MFG-4": {
        "ai_answered": false,
        "user_answered": true,
      },
    },
    "review": 0,
    "section": "MFG",
    "title": "Manufacturing Code of Conduct",
    "total": 4,
  },
  {
    "answered": 0,
    "complete": false,
    "questions": {
      "GHG-1": {
        "ai_answered": false,
        "user_answered": false,
      },
      "GHG-10": {
        "ai_answered": false,
        "user_answered": false,
      },
      "GHG-11": {
        "ai_answered": false,
        "user_answered": false,
      },
      "GHG-12": {
        "ai_answered": false,
        "user_answered": false,
      },
      "GHG-13": {
        "ai_answered": false,
        "user_answered": false,
      },
      "GHG-2": {
        "ai_answered": false,
        "user_answered": false,
      },
      "GHG-3": {
        "ai_answered": false,
        "user_answered": false,
      },
      "GHG-4": {
        "ai_answered": false,
        "user_answered": false,
      },
      "GHG-5": {
        "ai_answered": false,
        "user_answered": false,
      },
      "GHG-6": {
        "ai_answered": false,
        "user_answered": false,
      },
      "GHG-7": {
        "ai_answered": false,
        "user_answered": false,
      },
      "GHG-7A": {
        "ai_answered": false,
        "user_answered": false,
      },
      "GHG-7C": {
        "ai_answered": false,
        "user_answered": false,
      },
      "GHG-8": {
        "ai_answered": false,
        "user_answered": false,
      },
      "GHG-9A": {
        "ai_answered": false,
        "user_answered": false,
      },
    },
    "review": 0,
    "section": "GHG",
    "title": "Greenhouse Gas Emissions & Climate",
    "total": 15,
  },
  {
    "answered": 0,
    "complete": false,
    "questions": {
      "APK-1": {
        "ai_answered": false,
        "user_answered": false,
      },
      "APK-2": {
        "ai_answered": false,
        "user_answered": false,
      },
    },
    "review": 0,
    "section": "APK",
    "title": "APK - STUFF",
    "total": 2,
  },
]
`;

exports[`SurveyFilterService testing progress filter empty survey should return empty progress 1`] = `
[
  {
    "answered": 0,
    "complete": false,
    "questions": {
      "GEN-8": {
        "ai_answered": false,
        "user_answered": false,
      },
    },
    "review": 0,
    "section": "GEN",
    "title": "General",
    "total": 1,
  },
  {
    "answered": 0,
    "complete": false,
    "questions": {
      "MFG-1": {
        "ai_answered": false,
        "user_answered": false,
      },
    },
    "review": 0,
    "section": "MFG",
    "title": "Manufacturing Code of Conduct",
    "total": 1,
  },
  {
    "answered": 0,
    "complete": false,
    "questions": {
      "GHG-1": {
        "ai_answered": false,
        "user_answered": false,
      },
      "GHG-10": {
        "ai_answered": false,
        "user_answered": false,
      },
      "GHG-11": {
        "ai_answered": false,
        "user_answered": false,
      },
      "GHG-12": {
        "ai_answered": false,
        "user_answered": false,
      },
      "GHG-13": {
        "ai_answered": false,
        "user_answered": false,
      },
      "GHG-2": {
        "ai_answered": false,
        "user_answered": false,
      },
      "GHG-3": {
        "ai_answered": false,
        "user_answered": false,
      },
      "GHG-4": {
        "ai_answered": false,
        "user_answered": false,
      },
      "GHG-5": {
        "ai_answered": false,
        "user_answered": false,
      },
      "GHG-6": {
        "ai_answered": false,
        "user_answered": false,
      },
      "GHG-7": {
        "ai_answered": false,
        "user_answered": false,
      },
      "GHG-7A": {
        "ai_answered": false,
        "user_answered": false,
      },
      "GHG-7C": {
        "ai_answered": false,
        "user_answered": false,
      },
      "GHG-8": {
        "ai_answered": false,
        "user_answered": false,
      },
      "GHG-9A": {
        "ai_answered": false,
        "user_answered": false,
      },
    },
    "review": 0,
    "section": "GHG",
    "title": "Greenhouse Gas Emissions & Climate",
    "total": 15,
  },
  {
    "answered": 0,
    "complete": false,
    "questions": {
      "APK-1": {
        "ai_answered": false,
        "user_answered": false,
      },
      "APK-2": {
        "ai_answered": false,
        "user_answered": false,
      },
    },
    "review": 0,
    "section": "APK",
    "title": "APK - STUFF",
    "total": 2,
  },
]
`;

exports[`SurveyFilterService testing progress filter simulating AI answers Should contain 0 review items 1`] = `
[
  {
    "answered": 0,
    "complete": false,
    "questions": {
      "GEN-8": {
        "ai_answered": false,
        "user_answered": false,
      },
    },
    "review": 0,
    "section": "GEN",
    "title": "General",
    "total": 1,
  },
  {
    "answered": 4,
    "complete": true,
    "questions": {
      "MFG-1": {
        "ai_answered": true,
        "user_answered": true,
      },
      "MFG-2": {
        "ai_answered": false,
        "user_answered": true,
      },
      "MFG-3": {
        "ai_answered": false,
        "user_answered": true,
      },
      "MFG-4": {
        "ai_answered": false,
        "user_answered": true,
      },
    },
    "review": 0,
    "section": "MFG",
    "title": "Manufacturing Code of Conduct",
    "total": 4,
  },
  {
    "answered": 0,
    "complete": false,
    "questions": {
      "GHG-1": {
        "ai_answered": false,
        "user_answered": false,
      },
      "GHG-10": {
        "ai_answered": false,
        "user_answered": false,
      },
      "GHG-11": {
        "ai_answered": false,
        "user_answered": false,
      },
      "GHG-12": {
        "ai_answered": false,
        "user_answered": false,
      },
      "GHG-13": {
        "ai_answered": false,
        "user_answered": false,
      },
      "GHG-2": {
        "ai_answered": false,
        "user_answered": false,
      },
      "GHG-3": {
        "ai_answered": false,
        "user_answered": false,
      },
      "GHG-4": {
        "ai_answered": false,
        "user_answered": false,
      },
      "GHG-5": {
        "ai_answered": false,
        "user_answered": false,
      },
      "GHG-6": {
        "ai_answered": false,
        "user_answered": false,
      },
      "GHG-7": {
        "ai_answered": false,
        "user_answered": false,
      },
      "GHG-7A": {
        "ai_answered": false,
        "user_answered": false,
      },
      "GHG-7C": {
        "ai_answered": false,
        "user_answered": false,
      },
      "GHG-8": {
        "ai_answered": false,
        "user_answered": false,
      },
      "GHG-9A": {
        "ai_answered": false,
        "user_answered": false,
      },
    },
    "review": 0,
    "section": "GHG",
    "title": "Greenhouse Gas Emissions & Climate",
    "total": 15,
  },
  {
    "answered": 0,
    "complete": false,
    "questions": {
      "APK-1": {
        "ai_answered": false,
        "user_answered": false,
      },
      "APK-2": {
        "ai_answered": false,
        "user_answered": false,
      },
    },
    "review": 0,
    "section": "APK",
    "title": "APK - STUFF",
    "total": 2,
  },
]
`;

exports[`SurveyFilterService testing progress filter simulating AI answers Should contain 1 review items 1`] = `
[
  {
    "answered": 0,
    "complete": false,
    "questions": {
      "GEN-8": {
        "ai_answered": false,
        "user_answered": false,
      },
    },
    "review": 0,
    "section": "GEN",
    "title": "General",
    "total": 1,
  },
  {
    "answered": 1,
    "complete": false,
    "questions": {
      "MFG-1": {
        "ai_answered": true,
        "user_answered": true,
      },
      "MFG-2": {
        "ai_answered": true,
        "user_answered": false,
      },
      "MFG-3": {
        "ai_answered": false,
        "user_answered": false,
      },
      "MFG-4": {
        "ai_answered": false,
        "user_answered": false,
      },
    },
    "review": 1,
    "section": "MFG",
    "title": "Manufacturing Code of Conduct",
    "total": 4,
  },
  {
    "answered": 0,
    "complete": false,
    "questions": {
      "GHG-1": {
        "ai_answered": false,
        "user_answered": false,
      },
      "GHG-10": {
        "ai_answered": false,
        "user_answered": false,
      },
      "GHG-11": {
        "ai_answered": false,
        "user_answered": false,
      },
      "GHG-12": {
        "ai_answered": false,
        "user_answered": false,
      },
      "GHG-13": {
        "ai_answered": false,
        "user_answered": false,
      },
      "GHG-2": {
        "ai_answered": false,
        "user_answered": false,
      },
      "GHG-3": {
        "ai_answered": false,
        "user_answered": false,
      },
      "GHG-4": {
        "ai_answered": false,
        "user_answered": false,
      },
      "GHG-5": {
        "ai_answered": false,
        "user_answered": false,
      },
      "GHG-6": {
        "ai_answered": false,
        "user_answered": false,
      },
      "GHG-7": {
        "ai_answered": false,
        "user_answered": false,
      },
      "GHG-7A": {
        "ai_answered": false,
        "user_answered": false,
      },
      "GHG-7C": {
        "ai_answered": false,
        "user_answered": false,
      },
      "GHG-8": {
        "ai_answered": false,
        "user_answered": false,
      },
      "GHG-9A": {
        "ai_answered": false,
        "user_answered": false,
      },
    },
    "review": 0,
    "section": "GHG",
    "title": "Greenhouse Gas Emissions & Climate",
    "total": 15,
  },
  {
    "answered": 0,
    "complete": false,
    "questions": {
      "APK-1": {
        "ai_answered": false,
        "user_answered": false,
      },
      "APK-2": {
        "ai_answered": false,
        "user_answered": false,
      },
    },
    "review": 0,
    "section": "APK",
    "title": "APK - STUFF",
    "total": 2,
  },
]
`;

exports[`SurveyFilterService testing progress filter simulating AI answers Should contain 2 review items 1`] = `
[
  {
    "answered": 0,
    "complete": false,
    "questions": {
      "GEN-8": {
        "ai_answered": false,
        "user_answered": false,
      },
    },
    "review": 0,
    "section": "GEN",
    "title": "General",
    "total": 1,
  },
  {
    "answered": 1,
    "complete": false,
    "questions": {
      "MFG-1": {
        "ai_answered": true,
        "user_answered": true,
      },
      "MFG-2": {
        "ai_answered": true,
        "user_answered": false,
      },
      "MFG-3": {
        "ai_answered": true,
        "user_answered": false,
      },
      "MFG-4": {
        "ai_answered": false,
        "user_answered": false,
      },
    },
    "review": 2,
    "section": "MFG",
    "title": "Manufacturing Code of Conduct",
    "total": 4,
  },
  {
    "answered": 0,
    "complete": false,
    "questions": {
      "GHG-1": {
        "ai_answered": false,
        "user_answered": false,
      },
      "GHG-10": {
        "ai_answered": false,
        "user_answered": false,
      },
      "GHG-11": {
        "ai_answered": false,
        "user_answered": false,
      },
      "GHG-12": {
        "ai_answered": false,
        "user_answered": false,
      },
      "GHG-13": {
        "ai_answered": false,
        "user_answered": false,
      },
      "GHG-2": {
        "ai_answered": false,
        "user_answered": false,
      },
      "GHG-3": {
        "ai_answered": false,
        "user_answered": false,
      },
      "GHG-4": {
        "ai_answered": false,
        "user_answered": false,
      },
      "GHG-5": {
        "ai_answered": false,
        "user_answered": false,
      },
      "GHG-6": {
        "ai_answered": false,
        "user_answered": false,
      },
      "GHG-7": {
        "ai_answered": false,
        "user_answered": false,
      },
      "GHG-7A": {
        "ai_answered": false,
        "user_answered": false,
      },
      "GHG-7C": {
        "ai_answered": false,
        "user_answered": false,
      },
      "GHG-8": {
        "ai_answered": false,
        "user_answered": false,
      },
      "GHG-9A": {
        "ai_answered": false,
        "user_answered": false,
      },
    },
    "review": 0,
    "section": "GHG",
    "title": "Greenhouse Gas Emissions & Climate",
    "total": 15,
  },
  {
    "answered": 0,
    "complete": false,
    "questions": {
      "APK-1": {
        "ai_answered": false,
        "user_answered": false,
      },
      "APK-2": {
        "ai_answered": false,
        "user_answered": false,
      },
    },
    "review": 0,
    "section": "APK",
    "title": "APK - STUFF",
    "total": 2,
  },
]
`;

exports[`SurveyFilterService testing progress filter simulating AI answers Should contain 3 review items 1`] = `
[
  {
    "answered": 0,
    "complete": false,
    "questions": {
      "GEN-8": {
        "ai_answered": false,
        "user_answered": false,
      },
    },
    "review": 0,
    "section": "GEN",
    "title": "General",
    "total": 1,
  },
  {
    "answered": 1,
    "complete": false,
    "questions": {
      "MFG-1": {
        "ai_answered": true,
        "user_answered": true,
      },
      "MFG-2": {
        "ai_answered": true,
        "user_answered": false,
      },
      "MFG-3": {
        "ai_answered": true,
        "user_answered": false,
      },
      "MFG-4": {
        "ai_answered": true,
        "user_answered": false,
      },
    },
    "review": 3,
    "section": "MFG",
    "title": "Manufacturing Code of Conduct",
    "total": 4,
  },
  {
    "answered": 0,
    "complete": false,
    "questions": {
      "GHG-1": {
        "ai_answered": false,
        "user_answered": false,
      },
      "GHG-10": {
        "ai_answered": false,
        "user_answered": false,
      },
      "GHG-11": {
        "ai_answered": false,
        "user_answered": false,
      },
      "GHG-12": {
        "ai_answered": false,
        "user_answered": false,
      },
      "GHG-13": {
        "ai_answered": false,
        "user_answered": false,
      },
      "GHG-2": {
        "ai_answered": false,
        "user_answered": false,
      },
      "GHG-3": {
        "ai_answered": false,
        "user_answered": false,
      },
      "GHG-4": {
        "ai_answered": false,
        "user_answered": false,
      },
      "GHG-5": {
        "ai_answered": false,
        "user_answered": false,
      },
      "GHG-6": {
        "ai_answered": false,
        "user_answered": false,
      },
      "GHG-7": {
        "ai_answered": false,
        "user_answered": false,
      },
      "GHG-7A": {
        "ai_answered": false,
        "user_answered": false,
      },
      "GHG-7C": {
        "ai_answered": false,
        "user_answered": false,
      },
      "GHG-8": {
        "ai_answered": false,
        "user_answered": false,
      },
      "GHG-9A": {
        "ai_answered": false,
        "user_answered": false,
      },
    },
    "review": 0,
    "section": "GHG",
    "title": "Greenhouse Gas Emissions & Climate",
    "total": 15,
  },
  {
    "answered": 0,
    "complete": false,
    "questions": {
      "APK-1": {
        "ai_answered": false,
        "user_answered": false,
      },
      "APK-2": {
        "ai_answered": false,
        "user_answered": false,
      },
    },
    "review": 0,
    "section": "APK",
    "title": "APK - STUFF",
    "total": 2,
  },
]
`;
